package com.lld.interviewquestions.parking_lot.enums;

public enum VehicleType {
    TWO_WHEELER,
    FOUR_WHEELER,
}


