package com.lld.interviewquestions.parking_lot.payment;

public interface Payment {

    boolean pay(double amount);
}
